k8s-core/pod-name-webhook/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-name-wh
  namespace: pod-name-wh
spec:
  selector:
    app: pod-name-wh
  ports:
  - name: https
    port: 443
    targetPort: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-name-wh
  namespace: pod-name-wh
spec:
  selector:
    matchLabels:
      app: pod-name-wh
  template:
    metadata:
      labels:
        app: pod-name-wh
        cgroup.meoe.io/burst: enable
      annotations:
        cgroup.meoe.io/burst: wh=50m
    spec:
      containers:
      - name: wh
        image: ghcr.io/d-uzlov/daemonset-name-wh:v0.1.5
        ports:
        - name: https
          containerPort: 8443
        securityContext:
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 1m
            memory: 15Mi
          limits:
            cpu: 10m
            memory: 25Mi
        volumeMounts:
        - mountPath: /certs
          name: cert
      volumes:
      - name: cert
        secret:
          secretName: cert-webhook
